VT341805-203: fixed overlapping of burger with profile page

--- a/client/src/css/BurgerNav.css
+++ b/client/src/css/BurgerNav.css
@@ -7,9 +7,9 @@
 .bm-burger-button {
   position: fixed;
   width: 30px;
-  height: 24px;
-  left: 30px;
-  top: 36px;
+  height: 25px;
+  left: 28px;
+  top: 28px;
 }
 
 /* Color/shape of burger icon bars */
