--- a/client/src/css/ProfilePage.css
+++ b/client/src/css/ProfilePage.css
@@ -22,7 +22,7 @@ basic style profile page
 .value-label {
   float: right;
   max-width: 300px;
-  min-width: 200px;
+  min-width: 180px;
   margin: 0;
   padding-left: 0;
 }
